GH-13 Add spacing fix for video wrapper

--- a/src/components/Experience/styles/experience-video.scss
+++ b/src/components/Experience/styles/experience-video.scss
@@ -6,6 +6,7 @@
 
     &__wrapper {
         position: relative;
+        display: flex;
     }
 
     &__play-container {
